# sphinx-licenseinfo

./: .bumpversion.cfg  .pre-commit-config.yaml  .stylelintrc.json  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  index.rst  license.rst  requirements.txt  usage.rst
doc-source/api/: nodes.rst  sphinx-licenseinfo.rst  translators.rst
doc-source/examples/: bsd-2-clause.rst  gpl-3.0.rst  index.rst  lgpl-3.0.rst  mit.rst
sphinx_licenseinfo/: __init__.py  license_info.css  license_info.t.html  nodes.py  translators.py
tests/: conftest.py  index.rst  problematic.rst  requirements.txt  test_links.py  test_output.py
tests/examples/: bsd-2-clause.rst  gpl-3.0.rst  lgpl-3.0.rst  mit.rst  pep639.rst
tests/test_output_/: test_html_output_bsd-2-clause.html  test_html_output_gpl-3.0.html  test_html_output_lgpl-3.0.html  test_html_output_licenses_0BSD_.html  test_html_output_licenses_AFL_3_0_.html  test_html_output_licenses_AGPL_3_0_.html  test_html_output_licenses_Apache_2_0_.html  test_html_output_licenses_Artistic_2_0_.html  test_html_output_licenses_BSD_2_Clause_.html  test_html_output_licenses_BSD_3_Clause_.html  test_html_output_licenses_BSD_3_Clause_Clear_.html  test_html_output_licenses_BSD_4_Clause_.html  test_html_output_licenses_BSL_1_0_.html  test_html_output_licenses_CC0_1_0_.html  test_html_output_licenses_CC_BY_4_0_.html  test_html_output_licenses_CC_BY_SA_4_0_.html  test_html_output_licenses_CECILL_2_1_.html  test_html_output_licenses_CERN_OHL_P_2_0_.html  test_html_output_licenses_CERN_OHL_S_2_0_.html  test_html_output_licenses_CERN_OHL_W_2_0_.html  test_html_output_licenses_ECL_2_0_.html  test_html_output_licenses_EPL_1_0_.html  test_html_output_licenses_EPL_2_0_.html  test_html_output_licenses_EUPL_1_1_.html  test_html_output_licenses_EUPL_1_2_.html  test_html_output_licenses_GFDL_1_3_.html  test_html_output_licenses_GPL_2_0_.html  test_html_output_licenses_GPL_3_0_.html  test_html_output_licenses_ISC_.html  test_html_output_licenses_LGPL_2_1_.html  test_html_output_licenses_LGPL_3_0_.html  test_html_output_licenses_LPPL_1_3c_.html  test_html_output_licenses_MIT_.html  test_html_output_licenses_MIT_0_.html  test_html_output_licenses_MPL_2_0_.html  test_html_output_licenses_MS_PL_.html  test_html_output_licenses_MS_RL_.html  test_html_output_licenses_MulanPSL_2_0_.html  test_html_output_licenses_NCSA_.html  test_html_output_licenses_ODbL_1_0_.html  (+11 more)
tests/wheels/: CacheControl-0.12.6-py2.py3-none-any.whl
